2014-10-07 Knuppe
 * The TypeResolver was added in order to make the java implementations compatible with SharpNL.
2014-10-30 
 * Added the evaluation monitor to the trainers, it can be used to listen messages of the 
   evaluation or it can cancel a training operation.

Release 1.0 (2014-12-06)
 - via NuGet

2014-12-08 Knuppe
 * Stemmers began to be rewritten ( the compiler freaks with the automatically generated by Snowball, problems like:
   heuristically unreachable, unused variables, etc... So I'll rewrite a decent stemmer... )

2014-12-09 Knuppe 
 * I decided to expose the extensions (SharpNL.Extesions) since they are quite userful.
 * The AbstractStemmer was added with cache support, surely the cache will improve performance.
 * English and Portuguese Porter's stemming algorithm were implemented... And they are thread-safe now! :D
 * RSLP (Stemming Algorithm for the Portuguese Language) implemented.

2014-12-10 Knuppe
 * Lemmatization support added

2015-02-17 Knuppe
 * The text objects now can store data in a dictionary.
 * Utility.StringTokenizer added

2015-02-19 Knuppe
 * NameSampleSequenceStream was implemented!

2015-03-12 Knuppe
 * Now the library supports text classification
 * A GENERIC BaysianClassifier was added - I worked a few weeks to be able to implement it... ;-)