@@ -85,6 +85,7 @@
     <Compile Include="Text\Category.cs" />
     <Compile Include="Text\Extensions.cs" />
     <Compile Include="Text\ICategory.cs" />
+    <Compile Include="Tokenize\TokenUtilities.cs" />
     <Compile Include="Utility\FeatureGen\BrownBigramFeatureGenerator.cs" />
     <Compile Include="Utility\FeatureGen\BrownCluster.cs" />
     <Compile Include="Utility\FeatureGen\BrownTokenClasses.cs" />
