@@ -30,3 +30,6 @@ Release 1.0 (2014-12-06)
 2015-03-12 Knuppe
  * Now the library supports text classification
  * A GENERIC BaysianClassifier was added - I worked a few weeks to be able to implement it... ;-)
+
+2015-03-14 Knuppe
+ * A token utility class added to help in the classifiers.
